--- a/README.Rmd
+++ b/README.Rmd
@@ -22,20 +22,32 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/shinyworks/shinyenv/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/shinyworks/shinyenv/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-An experimental package to capture and reroute dangerous Shiny function calls.
+An experimental package to deal with environment-like variables in Shiny.
 
 ## Installation
 
 You can install the development version of shinyenv from [GitHub](https://github.com/) with:
 
 ``` r
-# install.packages("remotes")
-remotes::install_github("shinyworks/shinyenv")
+# install.packages("pak")
+pak::pak("shinyworks/shinyenv")
 ```
 
 ## Usage
 
-Add usage information and examples here.
+Instead of `Sys.setenv()`, use `shinyenv::shiny_setenv()`,
+
+```{r eval = FALSE}
+# NO: Sys.setenv(foo = "bar", baz = "foo")
+shinyenv::shiny_setenv(foo = "bar", baz = "foo")
+```
+
+Instead of `Sys.getenv()`, use `shinyenv::shiny_getenv()`,
+
+```{r eval = FALSE}
+# NO: Sys.getenv("foo")
+shinyenv::shiny_getenv("foo")
+```
 
 ## Code of Conduct
 
